@@ -1,3 +1,11 @@
+2011-07-26    <simleo@neuron.crs4.it>
+
+	* tools/check_rs.py (DbSnpReader): header parser made more robust.
+
+2011-07-25    <simleo@neuron.crs4.it>
+
+	* tools/check_rs.py: changed to output dbSNP sequences.
+
 2011-07-22    <zag@manzanillo>
 
 	* docs/index.rst: Started documentation restructuring. Mostly
